--- a/templates/synchronizer/project.html
+++ b/templates/synchronizer/project.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="col s12">
         <div class="input-field col s3 no-margin-bottom">
-            <h5 class="h36px">
+            <h5 class="h36px" name="project-title">
                 {{ project.title }}
             </h5>
             <h6 class="h36px">
